# invoice_generator

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_CPP.md  USAGE_GUIDE.md  build.sh  config.xlsx  generate_invoices.py  orders.csv  requirements.txt  run_invoices.bat
src/: CSVParser.cpp  CSVParser.h  HighlightManager.cpp  HighlightManager.h  InvoiceData.h  MainWindow.cpp  MainWindow.h  PDFGenerator.cpp  PDFGenerator.h  TemplateEditor.cpp  TemplateEditor.h  main.cpp
ui/: MainWindow.ui
